@startuml plateuml
class Platesamling{
    +eier : Eier
    #plater : list[Platealbum]
    #artister : list[Artist]
    +registrerAlbum(plate: Platealbum)
    +registrerArtist(artist: Artist)
    +visAllePlater()
    +visAlleArtister()
    +visAlleArtistersPlater(artist: Artist)
}
class Platealbum{
    #albumnavn : str
    #artist : str
    #plateselskap : str
    #utgivelsesår : int
    +visAlbumInfo()
}

class Artist{
    #artistnavn : str
    +visInfo()
}
class LPAlbum{
    #platetype : "LP"
    #farge : str
    #avspillingshastighet : int = 33 | 45
    +visAlbumInfo()
}
class CDAlbum{
    #platetype : "CD"
    +visAlbumInfo()
}

class Eier{
    +navn : str
    #platesamlinger : list[Platesamling]
    +opprettPlatesamling()
    +visPlatesamlinger()
}
LPAlbum -up-|> Platealbum
CDAlbum -up-|> Platealbum
Platealbum "1" -up-o "many" Platesamling: registrerAlbum(Platealbum) >
Eier "many" -* "1" Platesamling
Artist "many" -left-o "1" Platealbum
Artist "many" -left-o Platesamling: registrerArtist(Artist) >

@enduml